[package]
name = "sklears-compose"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["machine-learning", "pipeline", "column-transformer"]
categories = ["science", "mathematics"]
description = "Composite estimators and transformers"

[lints]
workspace = true

# SciRS2 Policy Compliant Dependencies
[dependencies]
sklears-core = { workspace = true }
# sklears-simd = { workspace = true }  # Temporarily disabled due to missing implementations
scirs2-core = { workspace = true }
scirs2-optimize = { workspace = true }
# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead
# ❌ rand - use scirs2_core::random instead
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
uuid = { workspace = true }
# ❌ REMOVED: rand_chacha - use scirs2_core::random instead (SciRS2 Policy violation)
futures = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = ["workflow"]
serde = ["dep:serde", "sklears-core/serde"]
workflow = ["serde", "dep:serde_json", "dep:serde_yaml"]

[[bench]]
name = "simd_benchmarks"
harness = false

# Note: Additional benchmarks created but need API updates to compile
# [[bench]]
# name = "composition_benchmarks"
# harness = false
#
# [[bench]]
# name = "ensemble_benchmarks"
# harness = false
#
# [[bench]]
# name = "feature_transformation_benchmarks"
# harness = false
