[package]
name = "sklears-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Core traits, types, and utilities for sklears machine learning library"
keywords = ["machine-learning", "ml", "core", "traits"]
categories = ["science", "mathematics"]

[lib]

[dependencies]
# Core scientific computing dependencies - SciRS2 POLICY COMPLIANT
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }

# ✅ SciRS2 Policy: Use scirs2_core::ndarray for all array operations
# ✅ SciRS2 Policy: Use scirs2_core::random for all random number generation
# ❌ REMOVED: Legacy ndarray, rand, rand_distr dependencies - use SciRS2 equivalents

# Standard numeric and utility dependencies
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
approx = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
bytemuck = { workspace = true }
futures-core = { workspace = true }
num_cpus = "1.17"
memmap2 = { version = "0.9", optional = true }
oxicode = { workspace = true, optional = true }
rmp-serde = { version = "1.3", optional = true }
flate2 = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
polars = { version = "0.51", optional = true, default-features = false, features = ["lazy"] }
arrow = { version = "54", optional = true, default-features = false }
arrow-ipc = { version = "54", optional = true }
arrow-csv = { version = "54", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
libloading = { version = "0.8", optional = true }
# cudarc = { version = "0.12", optional = true, default-features = false, features = ["cublas", "curand", "cuda-12060"] }  # Disabled for macOS compatibility
chrono = { version = "0.4", features = ["serde", "std"] }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.47", features = ["time", "macros", "rt-multi-thread"], optional = true }

# Platform-specific dependencies for benchmarking and system monitoring
[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
once_cell = "1.21"
tempfile = { workspace = true }

[features]
default = ["std", "serde"]

# Core features
std = []
no_std = []

# Serialization features
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "chrono/serde"]
binary = ["dep:oxicode", "serde"]
messagepack = ["dep:rmp-serde", "serde"]
compression = ["dep:flate2", "dep:zstd"]
binary_full = ["binary", "messagepack", "compression"]

# Data format support
polars = ["dep:polars"]
arrow = ["dep:arrow", "dep:arrow-ipc", "dep:arrow-csv"]
# Performance features
simd = []
parallel = [] 
mmap = ["dep:memmap2"]

# Algorithm categories (fine-grained control)
linear_models = []
tree_models = []
neural_networks = []
clustering = []
dimensionality_reduction = []
ensemble_methods = []

# Advanced features
async_support = ["dep:async-trait", "dep:tokio"]
streaming = ["async_support"]
gpu_support = []  # Feature flag for GPU support (without cudarc dependency)
distributed = ["async_support"]
exotic_hardware = ["async_support"]
effect_types = []
autodiff = []
compile_time_macros = []
auto_benchmarks = []
plugins = []
dynamic_loading = ["plugins", "dep:libloading"]
experimental = ["plugins", "async_support", "simd"]
custom_lints = []

# Utility features
validation = []
metrics = []
preprocessing = []
model_selection = []

# Debug and development features
debug_assertions = []
profiling = []

# Convenience feature combinations
all_algorithms = [
    "linear_models",
    "tree_models", 
    "neural_networks",
    "clustering",
    "dimensionality_reduction",
    "ensemble_methods"
]
all_formats = ["polars", "arrow", "binary_full"]
full = [
    "all_algorithms",
    "all_formats", 
    "simd",
    "parallel",
    "async_support",
    "validation",
    "metrics",
    "preprocessing",
    "model_selection"
]

# Disabled - incomplete implementation
# [[bench]]
# name = "core_operations"
# harness = false