[package]
name = "sklears-cross-decomposition"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["machine-learning", "pls", "cca", "cross-decomposition"]
categories = ["science", "mathematics"]
description = "Cross decomposition algorithms (PLS, CCA)"

[dependencies]
# SciRS2 Policy Compliant Dependencies
sklears-core = { workspace = true }
sklears-utils = { workspace = true }
numrs2 = { workspace = true }
scirs2-core = { workspace = true }

# Standard dependencies
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
num_cpus = { workspace = true }
# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead
# ❌ rand - use scirs2_core::random instead
# ❌ rand_distr - use scirs2_core::random instead

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde", "sklears-core/serde"]
gpu = ["scirs2-core/gpu"]
