[package]
name = "sklears-decomposition"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Matrix decomposition algorithms for sklears: PCA, ICA, NMF, SVD"
keywords = ["machine-learning", "pca", "decomposition", "dimension-reduction"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# SciRS2 Policy Compliant Dependencies
sklears-core = { workspace = true }
scirs2-core = { workspace = true }

# Core SciRS2 modules for Decomposition
scirs2-linalg = { workspace = true }    # For linear algebra operations
scirs2-optimize = { workspace = true }  # For optimization algorithms

# Standard dependencies
# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead
# ❌ ndarray-linalg - use scirs2-linalg instead
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
memmap2 = { workspace = true }
hdf5 = { workspace = true, optional = true }
oxicuda-solver = { workspace = true, optional = true }
oxicuda-memory = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std", "serde"]
std = ["sklears-core/std"]
parallel = ["rayon"]
gpu = ["dep:oxicuda-solver", "dep:oxicuda-memory", "sklears-core/gpu_support"]
hdf5-support = ["hdf5"]
sparse = []  # Feature flag for sparse matrix support (sprs removed per SciRS2 Policy; use scirs2-sparse)
serde = ["dep:serde", "sklears-core/serde"]
