[package]
name = "sklears-ensemble"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Ensemble methods for sklears: Random Forest, Gradient Boosting, AdaBoost"
keywords = ["machine-learning", "ensemble", "random-forest", "gradient-boosting"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# SciRS2 Policy Compliant Dependencies
sklears-core = { workspace = true }
sklears-utils = { workspace = true }
scirs2-core = { workspace = true }

# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead

# sklears-tree = { workspace = true } # Temporarily disabled due to upstream compilation errors
# sklears-model-selection = { workspace = true }  # Temporarily disabled due to compilation errors
# sklears-neural = { workspace = true } # Temporarily disabled due to upstream compilation errors
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
# ❌ REMOVED: Random dependencies (SciRS2 Policy violations)
# ❌ rand - use scirs2_core::random instead
# ❌ rand_distr - use scirs2_core::random instead
# ❌ rand_chacha - use scirs2_core::random instead
half = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
# sklears-metrics = { workspace = true } # Temporarily disabled due to SIMD compilation errors
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
std = ["sklears-core/std"]
parallel = ["rayon"]
serde = ["dep:serde", "sklears-core/serde"]
# SIMD support via scirs2-core::simd_ops (SciRS2 Policy compliant)
simd = []
nightly = []
